[package]
name = "mcsdf-font-tech-demo"
version = "1.0.1"
authors = ["Przemysław Lenart <przemek.lenart@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Multi-channel signed distance fields font tech demo"

[dependencies]
rayon = "1.5.1"
glium = "0.30.0"
mcsdf = { path = "./libs/mcsdf", version = "0.1.0" }

